test_programs/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_constructor_generics_mismatch/src/main.nr

    struct Foo<T> {
        x: T
    }

    fn main() {
        let _ = Foo::<i32, i64> { x: 1 };
    }
    